--- a/ReadMe
+++ b/ReadMe
@@ -24,8 +24,7 @@ This application requires the following dependencies:
 Nodejs.org
 w3schools.com
 npmjs.com
-
-HTML & CSS Semnatics: https://www.youtube.com/watch?v=kGW8Al_cga4, https://www.w3schools.com/html/html_layout.asp
+javascript.plainenglish.io
 
 ## License
 
